--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,65 @@
 		<targetJdk>1.6</targetJdk>
 		<junit.version>4.8.2</junit.version>
 	</properties>
-
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+	<url>http://github.com/culturegraph/metafacture-core</url>
+	<distributionManagement>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Sonatype OSS Maven Repository : Releases</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype OSS Maven Repository : Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<!-- <uniqueVersion>true</uniqueVersion> -->
+		</snapshotRepository>
+	</distributionManagement>
+	<developers>
+		<developer>
+			<id>mgeipel</id>
+			<name>Markus M. Geipel</name>
+			<email>m.geipel@dnb.de</email>
+			<url>https://github.com/mgeipel</url>
+			<organization>Deutsche Nationalbibliothek</organization>
+			<organizationUrl>http://www.dnb.de</organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>+1</timezone>
+		</developer>
+		<developer>
+			<id>cboehme</id>
+			<name>Christoph Böhme</name>
+			<email>c.boehme@dnb.de</email>
+			<url>https://github.com/cboehme</url>
+			<organization>Deutsche Nationalbibliothek</organization>
+			<organizationUrl>http://www.dnb.de</organizationUrl>
+			<roles>
+				<role>architect</role>
+				<role>developer</role>
+			</roles>
+			<timezone>+1</timezone>
+		</developer>
+	</developers>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+	<scm>
+		<connection>scm:git:git://github.com/culturegraph/metafacture-search.git</connection>
+		<developerConnection>scm:git:git@github.com:culturegraph/metafacture-search.git</developerConnection>
+		<url>http://github.com/culturegraph/metafacture-search</url>
+		<tag>HEAD</tag>
+	</scm>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -56,8 +114,61 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	<profiles>
+		<profile>
+			<id>sonatype-oss-release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.8</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+								<configuration>
+									<show>public</show>
+									<nohelp>true</nohelp>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.1.2</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.4</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>hudson</id>
 			<activation>
