--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<groupId>org.culturegraph</groupId>
 	<artifactId>metafacture-search</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<description>Library for lucene-based search functionality for culturegraph</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<targetJdk>1.6</targetJdk>
-		<junit.version>4.8.2</junit.version>
-	</properties>
+	<description>Library for lucene-based search functionality for culturegraph</description>
+	<url>http://github.com/culturegraph/metafacture-core</url>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
 			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
 		</license>
 	</licenses>
-	<url>http://github.com/culturegraph/metafacture-core</url>
-	<distributionManagement>
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Sonatype OSS Maven Repository : Releases</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype OSS Maven Repository : Snapshots</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-			<!-- <uniqueVersion>true</uniqueVersion> -->
-		</snapshotRepository>
-	</distributionManagement>
+
 	<developers>
 		<developer>
 			<id>mgeipel</id>
@@ -58,17 +49,33 @@
 			<timezone>+1</timezone>
 		</developer>
 	</developers>
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
+
 	<scm>
 		<connection>scm:git:git://github.com/culturegraph/metafacture-search.git</connection>
 		<developerConnection>scm:git:git@github.com:culturegraph/metafacture-search.git</developerConnection>
 		<url>http://github.com/culturegraph/metafacture-search</url>
 		<tag>HEAD</tag>
 	</scm>
+	<distributionManagement>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Sonatype OSS Maven Repository : Releases</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype OSS Maven Repository : Snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+			<!-- <uniqueVersion>true</uniqueVersion> -->
+		</snapshotRepository>
+	</distributionManagement>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<targetJdk>1.6</targetJdk>
+		<junit.version>4.8.2</junit.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
