[maven-release-plugin] prepare release metafacture-search-4.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.culturegraph</groupId>
 	<artifactId>metafacture-search</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>4.0.0</version>
 
 	<description>Library for lucene-based search functionality for culturegraph</description>
 	<url>http://github.com/culturegraph/metafacture-core</url>
