--- a/pom.xml
+++ b/pom.xml
@@ -85,19 +85,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>3.6.1</version>
+			<version>4.10.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers</artifactId>
-			<version>3.6.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-spatial</artifactId>
-			<version>3.6.1</version>
+			<artifactId>lucene-analyzers-common</artifactId>
+			<version>4.10.4</version>
 		</dependency>
 	</dependencies>
 
